welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var t:Array[Int]
      ^golomb:2: error: local variables must be initialized
  var t:Array[Int]
      ^golomb:5: error: value :: is not a member of Array[Int]
      i::t
       ^